Fix overlapping data points, Impliment Show and Hide individual data

--- a/www/sass/pages/_index.scss
+++ b/www/sass/pages/_index.scss
@@ -2,66 +2,24 @@
 // This file contains styles that are specific to the index page.
 // -----------------------------------------------------------------------------
 
-body {
-  font: 10px sans-serif;
-}
 
 
-.axis path,
-.axis line {
-  fill: none;
-  stroke: #000;
-  shape-rendering: crispEdges;
-}
-
-.dot {
-  stroke: #000;
-}
-
-#chart {
+#graph_container{
   width: 100%;
   height: auto;
   min-width: 300px;
   min-height: 300px;
   position: absolute;
-}
-
-.d3-tip {
-  line-height: 1;
-  font: 14px sans-serif;
-  padding: 12px;
-  background: rgba(0, 0, 0, 0.8);
-  color: rgb(185, 185, 185);
-  border-radius: 2px;
-}
-
-/* Creates a small triangle extender for the tooltip */
-.d3-tip:after {
-  box-sizing: border-box;
-  display: inline;
-  font-size: 10px;
-  width: 100%;
-  line-height: 1;
-  color: rgba(0, 0, 0, 0.8);
-  content: "\25BC";
-  position: absolute;
-  text-align: center;
-}
-
-/* Style northward tooltips differently */
-.d3-tip.n:after {
-  margin: -1px 0 0 0;
-  top: 100%;
-  left: 0;
+ // background-color:red;
 }
 
 
-#table{
-  width:26%;
-  height:500px;
-  background-color:red;
-  float: left;
+.graph_back {
+  fill: transparent;
+  shape-rendering: crispEdges;
 }
+
+
 
 .axis path,
   .axis line{
@@ -76,12 +34,111 @@ body {
     opacity: 0.2;
   }
 
-  .zero{
-    opacity: 1;
-  }
-
-  .graph_back {
-  fill: #9A9A9C;
-  opacity: 0.1;
-  shape-rendering: crispEdges;
+.dot {
+  stroke: #000;
 }
+
+
+// body {
+//   font: 10px sans-serif;
+// }
+
+
+// .axis path,
+// .axis line {
+//   fill: none;
+//   stroke: #000;
+//   shape-rendering: crispEdges;
+// }
+
+// .dot {
+//   stroke: #000;
+// }
+
+// #chart {
+//   width: 100%;
+//   height: auto;
+//   min-width: 300px;
+//   min-height: 300px;
+//   position: absolute;
+//   background-color:red;
+// }
+
+// .d3-tip {
+//   line-height: 1;
+//   font: 14px sans-serif;
+//   padding: 12px;
+//   background: rgba(0, 0, 0, 0.8);
+//   color: rgb(185, 185, 185);
+//   border-radius: 2px;
+// }
+
+// /* Creates a small triangle extender for the tooltip */
+// .d3-tip:after {
+//   box-sizing: border-box;
+//   display: inline;
+//   font-size: 10px;
+//   width: 100%;
+//   line-height: 1;
+//   color: rgba(0, 0, 0, 0.8);
+//   content: "\25BC";
+//   position: absolute;
+//   text-align: center;
+// }
+
+// /* Style northward tooltips differently */
+// .d3-tip.n:after {
+//   margin: -1px 0 0 0;
+//   top: 100%;
+//   left: 0;
+// }
+
+
+// #table{
+//   width:26%;
+//   height:500px;
+//   background-color:red;
+//   float: left;
+// }
+
+// .axis path,
+//   .axis line{
+//     fill: none;
+//     stroke: black;
+//   }
+
+
+
+
+//   .tick line{
+//     opacity: 0.2;
+//   }
+
+//   .zero{
+//     opacity: 1;
+//   }
+
+//   .graph_back {
+//   fill: #9A9A9C;
+//   opacity: 0.1;
+//   shape-rendering: crispEdges;
+// }
+
+
+
+// #drop{
+
+// width:100%;
+// height:250px;
+// background-color:red
+
+// }
+
+
+
+
+
+
+
+
+
